# codeg

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.ci  GROWTH.md  README.md  docker-compose.yml  eslint.config.mjs  install.ps1  install.sh  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  mobile-release.yml  release.yml  test.yml
codeg-tsnet/: .gitignore  control.go  control_test.go  funnel.go  go.mod  main.go  main_test.go  status.go
docs/: CLIENT-PRIVACY.md  mobile-stability-port.md
docs/chat-channels/: telegram-topic-mode.md
docs/mobile/: android-install-zh-CN.md  android-release-candidate-0.20.3.md
docs/plans/: 2026-06-27-session-scan-fusion.md  codeg-mobile.plan
docs/readme/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.zh-CN.md  README.zh-TW.md
docs/relay/: protocol-v1.md  self-hosting-zh-CN.md  threat-model.md
docs/specs/: 2026-06-27-session-scan-fusion-design.md
mobile/: README.md  package.json
mobile/plugins/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
mobile/plugins/android/: build.gradle.kts  consumer-rules.pro
mobile/plugins/android/src/androidTest/java/: ExampleInstrumentedTest.kt
mobile/plugins/android/src/main/java/: ExamplePlugin.kt
mobile/plugins/android/src/test/java/: ExampleUnitTest.kt
mobile/plugins/guest-js/: index.ts
mobile/plugins/ios/: Package.swift  README.md
mobile/plugins/ios/Sources/: ExamplePlugin.swift
mobile/plugins/permissions/: default.toml
mobile/plugins/permissions/autogenerated/: reference.md
mobile/plugins/permissions/autogenerated/commands/: delete_secret.toml  load_secret.toml  store_secret.toml
mobile/plugins/permissions/schemas/: schema.json
mobile/plugins/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: mobile.json
mobile/src-tauri/src/: lib.rs  main.rs
relay/: Cargo.toml  Dockerfile  README.md
relay-bridge/: Cargo.toml  README.md  relay-bridge.example.json
relay-bridge/src/: bridge.rs  config.rs  crypto.rs  lib.rs  main.rs  protocol.rs
relay/deploy/: Caddyfile.example  compose.yml  frpc.toml.example  nginx-frp.conf  relay.env.example
relay/src/: lib.rs  main.rs
scripts/: check-i18n-parity.mjs  generate-remote-manifest.sh  release.mjs  write-build-manifest.mjs
scripts/ops/: codeg-server-healthcheck.sh  run-codeg-server.sh
src/: test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/scripts/: prepare-sidecars.mjs
src-tauri/src/: app_error.rs  app_state.rs  build_info.rs  git_credential.rs  lib.rs  (+8 more)
(+800 files in other folders)
