[package]
name = "codeg-relay-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Outbound end-to-end encrypted bridge between Codeg and Codeg Relay"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
hkdf = "0.12"
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdh"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
