[package]
name = "tauri-plugin-secure-vault"
version = "0.1.0"
authors = [ "Crain99" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-secure-vault"

[dependencies]
tauri = { version = "=2.10.2" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "=2.5.3", features = ["build"] }
