[package]
name = "codeg-mobile"
version = "0.20.3"
description = "Codeg remote task controller for Android and iOS"
authors = ["Crain99"]
edition = "2021"

[lib]
name = "codeg_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["mobile-client"]
mobile-client = []

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-secure-vault = { path = "../plugins" }
